# sistema_clasificador

./: README.md  docker-compose.yml
Backend/: .env  Dockerfile  README.md  docker-compose.mongo.yml  main.py  pyproject.toml
Backend/src/: main.py
Backend/src/api/: chat_controller.py  clasificator_controller.py
Backend/src/business/: chat_service.py  sky_service.py
Backend/src/data/: chat_repository.py  database.py  database_interface.py
Backend/src/data/implementations/: repository_chat.py  repository_files.py  repository_summaries.py
Backend/src/dependencies/: get_chat_service.py  get_httpx_client.py  get_sky_service.py
Backend/src/llm/: dfd.py  model.py
Backend/src/models/: schemas.py
Backend/src/utils/: __init__.py  config.py
Frontend/: package-lock.json  package.json
Frontend/latest/: package-lock.json  package.json
Frontend/latest/Home/components/: cards.tsx  table.tsx  uploadDocument.tsx
Frontend/latest/Home/layout/: mainArea.tsx
Frontend/latest/chat/components/: chat-ui.css
Frontend/latest/chat/components/buttons/: ChatFloatButton.tsx
Frontend/latest/files/components/: embedding.tsx  iainformation.tsx  pagination.tsx  raginformation.tsx
Frontend/latest/src/: App.tsx  index.css  main.tsx
Frontend/latest/src/Hooks/: useAppDispatch.ts  useAppSelector.ts
Frontend/latest/src/Redux/: store.ts
Frontend/latest/src/Routes/: appRoutes.ts
Gateway-BFF/: .env  Dockerfile  README.md  main.py  pyproject.toml
Gateway-BFF/src/: api_endpoints.py  backend_service.py  config.py  dependecies.py  main.py
(+21 files in other folders)
